[tool.poetry]
name = "dry"
version = "0.1.0"
description = "DRY - Download from Youtube"
authors = ["Anderson Foschiera <foschieraanderson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
